--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">QuizApp</string>
+    <string name="quiz_question">The largest fruit is a pineapple</string>
+    <string name="true_btn_content">TRUE</string>
+    <string name="false_btn_content">FALSE</string>
 </resources>
