--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Quiz App</string>
-    <string name="init_question">Click NEXT to reveal a question</string>
+    <string name="init_question">Click one of the arrows to reveal a question</string>
     <string name="fruit_question">The largest fruit is a pineapple</string>
     <string name="toilet_question">Most toilets flush in B flat</string>
     <string name="fact_question">Waswa is cool</string>
@@ -10,4 +10,5 @@
     <string name="true_btn_content">TRUE</string>
     <string name="false_btn_content">FALSE</string>
     <string name="next_btn_content">NEXT</string>
+    <string name="previous_btn_content">PREVIOUS</string>
 </resources>
